# mics2-r3

./: .editorconfig  .gitignore  README.md
.github/workflows/: build-windows.yaml
script/: client.json
source/: CMakeLists.txt  CMakelists.txt  Makefile  args.cpp  args.h  bitboard.cpp  bitboard.h  config.h  evaluate.cpp  evaluate.h  kp_index_map.h  main.cpp  misc.cpp  misc.h  movegen.cpp  network.cpp  network.h  position.cpp  position.h  search.cpp  search.h  types.cpp  types.h  usi.cpp  usi.h
source/extra/: bitop.h  macros.h  rp_cmd.cpp  user_test.cpp
